test/compile_errors/stage1/obj/implicit_cast_from_f64_to_f32.zig
var x: f64 = 1.0;
var y: f32 = x;

export fn entry() usize { return @sizeOf(@TypeOf(y)); }

// error
// backend=stage1
// target=native
//
// tmp.zig:2:14: error: expected type 'f32', found 'f64'
